--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -84,7 +84,90 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
-
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Heba A. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Text Tokenizer</h2>
+                                        <p>Machine Learning tasks that process text may contain thousands of vocabulary
+                                          words which leads to models dealing with huge embeddings as input/output
+                                          (e.g. for one-hot-vectors and ndim=vocabulary_size). This causes an important consumption of memory,
+                                          complexe computations, and more importantly, sub-optimal learning due to extremely sparse and cumbersome
+                                          one-hot vectors. In this tutorial, we provide all the basics needed to correctly use the SpeechBrain Tokenizer relying
+                                          on SentencePiece (BPE and unigram).</p>
+                                        <a href="https://colab.research.google.com/drive/12yE3myHSH-eUxzNM0-FLtEOhzdQoLYWe?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Heba A.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>MultiGPU and SpeechBrain</h2>
+                                        <p>Machine Learning tasks that process text may contain thousands of vocabulary
+                                          words which leads to models dealing with huge embeddings as input/output
+                                          (e.g. for one-hot-vectors and ndim=vocabulary_size). This causes an important consumption of memory,
+                                          complexe computations, and more importantly, sub-optimal learning due to extremely sparse and cumbersome
+                                          one-hot vectors. In this tutorial, we provide all the basics needed to correctly use the SpeechBrain Tokenizer relying
+                                          on SentencePiece (BPE and unigram).</p>
+                                        <a href="https://colab.research.google.com/drive/12yE3myHSH-eUxzNM0-FLtEOhzdQoLYWe?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Complex and Quaternion Neural networks</h2>
+                                        <p>This tutorial demonstrates how to use the SpeechBrain implementation of complex-valued and quaternion-valued neural networks
+                                          for speech technologies. It covers the basics of highdimensional representations and the associated neural layers :
+                                          Linear, Convolution, Recurrent and Normalisation.</p>
+                                        <a href="https://colab.research.google.com/drive/1H6ObNswTd24ZwkXj3vHRxZcfXBKAsS3q?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
 
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
@@ -119,42 +202,32 @@
         			<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget ab_widget">
         					<div class="f_title">
-        						<h3>About Me</h3>
+        						<h3>About Us</h3>
         					</div>
-        					<p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills,</p>
+        					<p style="text-align:justify">SpeechBrain isn't a company or an association.
+                    It is an open-source toolkit and a community created by Dr. Mirco Ravanelli and co-created by Dr. Titouan Parcollet.
+                    We aim at making speech technologies more accessible for the community. </p>
         					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
         				</aside>
         			</div>
         			<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget news_widget">
         					<div class="f_title">
-        						<h3>Newsletter</h3>
+        						<h3>Opportunities</h3>
         					</div>
-        					<p>Stay updated with our latest trends</p>
-        					<div id="mc_embed_signup">
-                                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
-                                	<div class="input-group d-flex flex-row">
-                                        <input name="EMAIL" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                        <button class="btn sub-btn"><span class="lnr lnr-arrow-right"></span></button>
-                                    </div>
-                                    <div class="mt-10 info"></div>
-                                </form>
-                            </div>
+        					<p>Thanks to our sponsors, we often recruit talented candidates to continue expanding the functionalities of SpeechBrain.
+                    Feel free to contact us at: speechbrainproject@gmail.com</p>
         				</aside>
         			</div>
         			<div class="col-lg-2">
         				<aside class="f_widget social_widget">
         					<div class="f_title">
-        						<h3>Follow Me</h3>
+        						<h3>Follow Us</h3>
         					</div>
         					<p>Let us be social</p>
         					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
+        						<li><a href="https://twitter.com/SpeechBrain1"><i class="fa fa-twitter"></i></a></li>
         					</ul>
         				</aside>
         			</div>
