--- a/tutorial_hmm.html
+++ b/tutorial_hmm.html
@@ -4,6 +4,9 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- BLOCK INDEX -->
+        <meta name="robots" content="noindex">
+        <!-- BLOCK INDEX -->
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>SpeechBrain</title>
         <!-- Bootstrap CSS -->
@@ -38,7 +41,7 @@
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="">Get Started</a></li>
 								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
-                <li class="nav-item"><a class="nav-link" href="https://nvidia.github.io/NeMo/index.html">Documentation</a>
+                <li class="nav-item"><a class="nav-link" href="documentation/index.html">Documentation</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
