--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -45,6 +45,7 @@
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -83,6 +84,32 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">SpeechBrain Basics</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Introduction to SpeechBrain</h2>
+                                          <p>SpeechBrain is an open-source all-in-one speech toolkit based on PyTorch.
+                                            It is designed to make the research and development of speech technology easier. Alongside with our <a href="http://www.darnault-parcollet.fr/Parcollet/hiddennoshare/speechbrain.github.io/documentation/index.html"> documentation</a>
+                                            this tutorial will provide you all the very basic elements needed to start using SpeechBrain for your projects.</p>
+                                          <a href="https://colab.research.google.com/drive/12bg3aUdr9mTfOGqcB5pSMABoIKPgiwcM?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                                </div>
+                            </article>
                             <article class="row blog_item">
                                <div class="col-md-3">
                                    <div class="blog_info text-right">
@@ -222,52 +249,42 @@
 
         <!--================Footer Area =================-->
         <footer class="footer_area p_120">
-        	<div class="container">
-        		<div class="row footer_inner">
-        			<div class="col-lg-5 col-sm-6">
-        				<aside class="f_widget ab_widget">
-        					<div class="f_title">
-        						<h3>About Me</h3>
-        					</div>
-        					<p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills,</p>
-        					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-        				</aside>
-        			</div>
-        			<div class="col-lg-5 col-sm-6">
-        				<aside class="f_widget news_widget">
-        					<div class="f_title">
-        						<h3>Newsletter</h3>
-        					</div>
-        					<p>Stay updated with our latest trends</p>
-        					<div id="mc_embed_signup">
-                                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
-                                	<div class="input-group d-flex flex-row">
-                                        <input name="EMAIL" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                        <button class="btn sub-btn"><span class="lnr lnr-arrow-right"></span></button>
-                                    </div>
-                                    <div class="mt-10 info"></div>
-                                </form>
-                            </div>
-        				</aside>
-        			</div>
-        			<div class="col-lg-2">
-        				<aside class="f_widget social_widget">
-        					<div class="f_title">
-        						<h3>Follow Me</h3>
-        					</div>
-        					<p>Let us be social</p>
-        					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
-        					</ul>
-        				</aside>
-        			</div>
-        		</div>
-        	</div>
+          <div class="container">
+            <div class="row footer_inner">
+              <div class="col-lg-5 col-sm-6">
+                <aside class="f_widget ab_widget">
+                  <div class="f_title">
+                    <h3>About Us</h3>
+                  </div>
+                  <p style="text-align:justify">SpeechBrain isn't a company or an association.
+                    It is an open-source toolkit and a community created by Dr. Mirco Ravanelli and co-created by Dr. Titouan Parcollet.
+                    We aim at making speech technologies more accessible for the community. </p>
+                  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+                </aside>
+              </div>
+              <div class="col-lg-5 col-sm-6">
+                <aside class="f_widget news_widget">
+                  <div class="f_title">
+                    <h3>Opportunities</h3>
+                  </div>
+                  <p>Thanks to our sponsors, we often recruit talented candidates to continue expanding the functionalities of SpeechBrain.
+                    Feel free to contact us at: speechbrainproject@gmail.com</p>
+                </aside>
+              </div>
+              <div class="col-lg-2">
+                <aside class="f_widget social_widget">
+                  <div class="f_title">
+                    <h3>Follow Us</h3>
+                  </div>
+                  <p>Let us be social</p>
+                  <ul class="list">
+                    <li><a href="https://twitter.com/SpeechBrain1"><i class="fa fa-twitter"></i></a></li>
+                  </ul>
+                </aside>
+              </div>
+            </div>
+          </div>
         </footer>
         <!--================End Footer Area =================-->
 
