--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 									<ul class="dropdown-menu">
 										<li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -160,6 +161,12 @@
 
         <section class="made_life_area p_120">
         	<div class="container">
+            <div class="main_title">
+        			<h2>Why SpeechBrain?</h2>
+        			<p> SpeechBrain allows you to easily and quickly customize any part of your speech pipeline
+                ranging from the data management up to the downstream task metric.<br/>
+                No existing speech toolkit provide such a level of accebility.</p>
+        		</div>
         		<div class="made_life_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
