--- a/tutorial_nn.html
+++ b/tutorial_nn.html
@@ -46,6 +46,7 @@
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
 										<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -84,35 +85,61 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
-                          <article class="row blog_item">
-                             <div class="col-md-3">
-                                 <div class="blog_info text-right">
-                                      <div class="post_tag">
-                                          <a class="active" href="#">SpeechBrain Advanced</a>
-                                      </div>
-                                      <ul class="blog_meta list">
-                                          <li><a href="about.html">Heba A. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
-                                          <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
-                                          <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
-                                          <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
-                                      </ul>
-                                  </div>
-                             </div>
-                              <div class="col-md-9">
-                                <div class="blog_post">
-                                    <div class="blog_details">
-                                        <h2>Text Tokenizer</h2>
-                                        <p>Machine Learning tasks that process text may contain thousands of vocabulary
-                                          words which leads to models dealing with huge embeddings as input/output
-                                          (e.g. for one-hot-vectors and ndim=vocabulary_size). This causes an important consumption of memory,
-                                          complexe computations, and more importantly, sub-optimal learning due to extremely sparse and cumbersome
-                                          one-hot vectors. In this tutorial, we provide all the basics needed to correctly use the SpeechBrain Tokenizer relying
-                                          on SentencePiece (BPE and unigram).</p>
-                                        <a href="https://colab.research.google.com/drive/12yE3myHSH-eUxzNM0-FLtEOhzdQoLYWe?usp=sharing" class="blog_btn">Open in Google Colab</a>
+
+
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Neural Architectures</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
                                     </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Complex and Quaternion Neural networks</h2>
+                                          <p>This tutorial demonstrates how to use the SpeechBrain implementation of complex-valued and quaternion-valued neural networks
+                                            for speech technologies. It covers the basics of highdimensional representations and the associated neural layers :
+                                            Linear, Convolution, Recurrent and Normalisation.</p>
+                                          <a href="https://colab.research.google.com/drive/1H6ObNswTd24ZwkXj3vHRxZcfXBKAsS3q?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
                                 </div>
-                              </div>
-                          </article>
+                            </article>
+
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Neural Architectures</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Recurrent Neural Networks and SpeechBrain</h2>
+                                          <p>Recurrent Neural Networks (RNNs) offer a natural way to process sequences.
+                                            This tutorial demonstrates how to use the SpeechBrain implementations of RNNs including LSTMs, GRU, RNN and LiGRU a specific recurrent cell designed
+                                            for speech-related tasks. RNNs are at the core of many sequence to sequence models.</p>
+                                          <a href="https://colab.research.google.com/drive/1CTCzOP016D1c2SVg2jr9UHIz-xvcHgqP?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                                </div>
+                            </article>
 
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
