--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -46,6 +46,7 @@
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -193,7 +194,58 @@
                                     </div>
                                 </div>
                             </article>
-
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Source Separation</h2>
+                                            <p>In source separation, the goal is to be able to separate out the sources from an observed mixture signal
+                                              which consists of superposition of several sources. In this tutorial, we cover few examples of performing source separation with SpeechBrain.</p>
+                                            <a href="https://colab.research.google.com/drive/1YxsMW1KNqP1YihNUcfrjy0zUp7FhNNhN?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Grondin F. & Aris W.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Multi-microphone Beamforming</h2>
+                                            <p>Using a microphone array can be very handy to improve the signal quality
+                                              (e.g. reduce reverberation and noise) prior to performing speech recognition tasks.
+                                              Microphone arrays can also estimate the direction of arrival of a sound source, and this information can later
+                                              be used to "listen" in the direction of the source of interest.</p>
+                                            <a href="https://colab.research.google.com/drive/1YxsMW1KNqP1YihNUcfrjy0zUp7FhNNhN?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
 		                            <li class="page-item">
