--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         			<h2>Why SpeechBrain?</h2>
         			<p> SpeechBrain allows you to easily and quickly customize any part of your speech pipeline
                 ranging from the data management up to the downstream task metric.<br/>
-                No existing speech toolkit provide such a level of accebility.</p>
+                No existing speech toolkit provides such a level of accebility.</p>
         		</div>
         		<div class="made_life_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
