--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -40,6 +40,7 @@
 							<ul class="nav navbar-nav menu_nav justify-content-center">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
+                  <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
                 <li class="nav-item"><a class="nav-link" href="documentation/index.html">Documentation</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
@@ -82,6 +83,9 @@
         <!--================Blog Area =================-->
         <section class="blog_area">
             <div class="container">
+              <div class="main_title discourse">
+          			<p> <img src="img/logo_discourse.png"/> Join our official <a href="https://speechbrain.discourse.group">Discourse</a> to discuss with SpeechBrain users coming from all around the world! <img src="img/logo_discourse.png"/></p>
+          		</div>
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
@@ -241,7 +245,7 @@
                                               (e.g. reduce reverberation and noise) prior to performing speech recognition tasks.
                                               Microphone arrays can also estimate the direction of arrival of a sound source, and this information can later
                                               be used to "listen" in the direction of the source of interest.</p>
-                                            <a href="https://colab.research.google.com/drive/1YxsMW1KNqP1YihNUcfrjy0zUp7FhNNhN?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                            <a href="https://colab.research.google.com/drive/1UVoYDUiIrwMpBTghQPbA6rC1mc9IBzi6?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                         </div>
                                     </div>
                                 </div>
