--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -96,6 +96,35 @@
                                           <a class="active" href="#">SpeechBrain Advanced</a>
                                       </div>
                                       <ul class="blog_meta list">
+                                          <li><a href="about.html">Cornell S. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Mar. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Pre-trained Models and Fine-Tuning with <img src="img/hf.ico" alt="drawing" width="40" style="box-shadow: 0px 0px 0px -0px rgb(255, 255, 255)"/></h2>
+                                        <p>Training DNN models is often very time-consuming and expensive.
+                                          For this reason, whenever it is possible, using off-the-shelf pretrained
+                                          models can be convenient in various scenarios.
+                                          We provide a simple and straightforward way to download and instantiate a
+                                          state-of-the-art pretrained-model from <img src="img/hf.ico" alt="drawing" width="20"/> HuggingFace <img src="img/hf.ico" alt="drawing" width="20"/> and use it either for direct inference or
+                                          or fine-tuning/knowledge distillation or whatever new fancy technique you can come up with!</p>
+                                        <a href="https://colab.research.google.com/drive/1LN7R3U3xneDgDRK2gC5MzGkLysCWxuC3?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
                                           <li><a href="about.html">Heba A. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
                                           <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                           <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
@@ -118,7 +147,6 @@
                                 </div>
                               </div>
                           </article>
-
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
 		                            <li class="page-item">
