--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -226,6 +226,31 @@
                                   </div>
                                 </div>
                             </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">SpeechBrain Basics</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Heba A.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Mar. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Multi-GPU Considerations</h2>
+                                          <p>SpeechBrain provides two different methods to use multiple GPUs.
+                                            These solutions follow PyTorch standards and allow for intra- or cross-node training. In this tutorial, the use of Data Parallel (DP) and Distributed Data Parallel (DDP) within SpeechBrain are explained.</p>
+                                          <a href="https://colab.research.google.com/drive/13pBUacPiotw1IvyffvGZ-HrtBr9T6l15?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                                </div>
+                            </article>
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
 		                            <li class="page-item">
