--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -96,6 +96,32 @@
                                             <a class="active" href="#">Speech Processing</a>
                                         </div>
                                         <ul class="blog_meta list">
+                                            <li><a href="about.html">Plantinga P.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Speech Enhancement From Scratch</h2>
+                                            <p>So you want to do regression tasks with speech? Look no further, you're in the right place.
+                                              This tutorial will walk you through a basic speech enhancement template with SpeechBrain to
+                                              show all the components needed for making a new recipe.</p>
+                                            <a href="https://colab.research.google.com/drive/18RyiuKupAhwWX7fh3LCatwQGU5eIS3TR?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
                                             <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
                                             <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                             <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
