--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="#">About SpeechBrain</a>
                   <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
-                <li class="nav-item"><a class="nav-link" href="documentation/index.html">Documentation</a>
+                <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/en/latest/index.html">Documentation</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
