--- a/about.html
+++ b/about.html
@@ -175,6 +175,7 @@
               <li>Jianyuan Zhong, University of Rochester (USA)<li>
               <li>Brecht Desplanques, Ghent University (BE)<li>
               <li>Jenthe Thienpondt, Ghent University (BE)<li>
+	      <li>Salima Mdhaffar, Avignon Université (LIA, FR)<li>
               <li>Renato De Mori, University of McGill (CA), Avignon University (LIA, FR)</li>
               <li>Yoshua Bengio, Mila, University of Montréal (CA)</li>
             </ul>
