--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -189,7 +189,7 @@
                                 <div class="col-md-9">
                                     <div class="blog_post">
                                         <div class="blog_details">
-                                            <h2>Speech Features (MFCC, FBANK)</h2>
+                                            <h2>Speech Features</h2>
                                             <p>Speech is a very high-dimensional signal. For instance, when the sampling frequency is 16 kHz,
                                               we have 16000 samples for each second. Working with such very high dimensional data can be critical from a machine learning perspective.
                                               The goal of feature extraction is to find more compact ways to represent speech.</p>
