--- a/tutorial_nn.html
+++ b/tutorial_nn.html
@@ -66,7 +66,7 @@
 				<div class="container">
 					<div class="blog_b_text text-center">
 						<h2>SpeechBrain Tutorials</h2>
-						<h3>SpeechBrain Advanced</h3>
+						<h3>Neural Architectures</h3>
 
 					</div>
 				</div>
