--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- BLOCK INDEX -->
-        <meta name="robots" content="noindex">
-        <!-- BLOCK INDEX -->
-
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>SpeechBrain</title>
+        <title>SpeechBrain: A PyTorch Speech Toolkit</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
