--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -105,7 +105,7 @@
                                       <div class="blog_details">
                                           <h2>Introduction to SpeechBrain</h2>
                                           <p>SpeechBrain is an open-source all-in-one speech toolkit based on PyTorch.
-                                            It is designed to make the research and development of speech technology easier. Alongside with our <a href="http://www.darnault-parcollet.fr/Parcollet/hiddennoshare/speechbrain.github.io/documentation/index.html"> documentation</a>
+                                            It is designed to make the research and development of speech technology easier. Alongside with our <a href="https://speechbrain.readthedocs.io/en/latest/index.html"> documentation</a>
                                             this tutorial will provide you all the very basic elements needed to start using SpeechBrain for your projects.</p>
                                           <a href="https://colab.research.google.com/drive/12bg3aUdr9mTfOGqcB5pSMABoIKPgiwcM?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                       </div>
