--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
               <li>Loren Lugosch, Mila, McGill University (CA)</li>
               <li>Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
               <li>Ju-Chieh Chou, National Taiwan University (TW)</li>
-              <li>Abdel Heba, University of Toulouse (IRIT, FR)</li>
+              <li>Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
               <li>Francois Grondin, University of Sherbrooke (CA)</li>
               <li>William Aris, University of Sherbrooke (CA)</li>
               <li>Chien-Feng Liao, National Taiwan University (TW)</li>
