--- a/contributing.html
+++ b/contributing.html
@@ -102,7 +102,7 @@
                 Then open a pull request on the official repository.<br/>
                 <b>3.</b> Participate in the review process. Each pull request is reviewed by one or two reviewers.
                 Please integrate their feedbacks into your code. Once reviewers are happy with your pull request, they will merge it into the official code. <br/><br/>
-                <b>Details about this process (i.e including steps for installating the tests) are given in <a href="documentation/contributing.html"> the documentation </a>.</b>
+                <b>Details about this process (i.e including steps for installating the tests) are given in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>.</b>
               </p>
               <h3> How can I help? </h3>
               <p class="justified large"> Interractions between speech technologies and deep learning are various and numerous.
