--- a/tutorial_nn.html
+++ b/tutorial_nn.html
@@ -4,8 +4,11 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- BLOCK INDEX -->
+        <meta name="robots" content="noindex">
+        <!-- BLOCK INDEX -->
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>SpeechBrain: Neural Architectures</title>
+        <title>SpeechBrain</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -63,7 +66,7 @@
 				<div class="container">
 					<div class="blog_b_text text-center">
 						<h2>SpeechBrain Tutorials</h2>
-						<h3>Neural Architectures</h3>
+						<h3>SpeechBrain Advanced</h3>
 
 					</div>
 				</div>
@@ -86,6 +89,35 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
+
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">Neural Architectures</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">April. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Using Wav2Vec 2.0 from HuggingFace and Fairseq with SpeechBrain</h2>
+                                        <p>This tutorial describes how to combine (use and finetune) pretrained wav2vec2 models
+                                          coming both from fairseq or HuggingFace. Any wav2vec 2.0 model trained with the fairseq
+                                          toolkit or integrated to the transformers interface of HuggingFace can be then plugged to
+                                          SpeechBrain to approach a speech-related task: automatic speech recognition, speaker recognition,
+                                          spoken language understanding ...</p>
+                                        <a href="https://colab.research.google.com/drive/17Hu1pxqhfMisjkSgmM2CnZxfqDyn2hSY?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
 
 
                             <article class="row blog_item">
