better wording (suggested by Brigitte Tousignant)

--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
             </div>
             <div class="main_title">
               <h2>Contributors</h2>
-              <p class="justified large"> In this section we thanks all the peoples that contributed to SpeechBrain. </p>
+              <p class="justified large"> We would like to thank the following individuals who contributed to SpeechBrain: </p>
             </div>
             <ul class="contributors-list">
               <li>Mirco Ravanelli, Mila, Montréal (CA)</li>
