--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -93,6 +93,31 @@
                                             <a class="active" href="#">Speech Processing</a>
                                         </div>
                                         <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Apr. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 45min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Speech Recognition From Scratch</h2>
+                                            <p>Do you want to figure out how to implement your speech recognizer with SpeechBrain? Look no further, you're in the right place. This tutorial will walk you
+                                             through all the steps needed to implement an offline end-to-end attention-based speech recognizer. This is a self-contained tutorial that will help you 						     "connecting the dots" across all the steps needed to train a modern speech recognizer. We will address data preparation, tokenizer training, language model, 						     ASR model, and inference. We will explain how to train your model on your data.</p>
+                                            <a href="https://colab.research.google.com/drive/1aFgzrUv3udM_gNJNUoLaHIm78QHtxdIz?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
                                             <li><a href="about.html">Plantinga P.<i class="lnr lnr-user"></i></a></li>
                                             <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                             <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
